<resources>
    <string name="app_name">FlirtApp</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="flirt_app">FlirtApp</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_cancel">Cancel</string>
    <string name="new_account_here">Tap here!</string>
    <string name="need_account_here">Don\'t have an account? To sign up</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="create_account">Create account</string>
    <string name="signUp">Sign Up</string>
    <string name="conf_password">Confirm password:</string>
    <string name="sex">Sex:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email:</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="refresh">Refresh</string>
    <string-array name="tabs">
        <item>Profile</item>
        <item>Friends</item>
        <item>Tab 3</item>
        <item>Find Friends</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="age">Age:</string>
    <string name="numberFriendsLabel">Number of friends:</string>
    <string name="popularityLabel">Popularity:</string>
    <string name="profileDetailsTitle">PROFILE DETAILS</string>
    <string name="date_brith">Birthday:</string>
    <string name="title_activity_find_friends_details">FindFriendsDetails</string>
    <string name="username_list_label">Username</string>
    <string name="title_activity_friends_details">FriendsDetails</string>
    <string name="logout">Logout</string>
</resources>
