<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="rs.edu.ict.flirtapp.SignUpActivity">

    <TextView
        android:text="@string/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="#FFCC00"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textFlirtApp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textFlirtApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/buttonLayout">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:id="@+id/textViewUsername"
                android:textSize="25sp"
                android:textColor="#FFF"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextUsername"
                android:textSize="35sp"
                android:textColor="#000"
                android:background="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:id="@+id/textViewPassword"
                android:textSize="25sp"
                android:textColor="#FFF"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/editTextPassword"
                android:textSize="35sp"
                android:textColor="#000"
                android:background="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conf_password"
                android:id="@+id/textViewConfPassword"
                android:textSize="25sp"
                android:textColor="#FFF"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/editTextConfPassword"
                android:textSize="35sp"
                android:textColor="#000"
                android:background="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/textViewEmail"
                android:textSize="25sp"
                android:textColor="#FFF"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editTextEmail"
                android:textSize="35sp"
                android:textColor="#000"
                android:background="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:id="@+id/textViewSex"
                android:textSize="25sp"
                android:textColor="#FFF"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"/>

            <RadioGroup
                android:id="@+id/radioGroupSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                 <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioSexMale"
                        android:text="@string/male"
                        android:textSize="25sp"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioSexFemale"
                    android:text="@string/female"
                    android:textSize="25sp"/>
            </RadioGroup>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:id="@+id/btnSignUp"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="30dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel"
            android:id="@+id/btnCancel"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/btnSignUp"
            android:layout_toEndOf="@+id/btnSignUp" />
    </LinearLayout>


</RelativeLayout>
