<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="rs.edu.ict.flirtapp.LoginActivity">

    <TextView
        android:text="@string/flirt_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textColor="#FFCC00"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/textFlirtApp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/textUsername"
        android:textSize="25sp"
        android:textColor="#FFF"
        android:layout_below="@+id/textFlirtApp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Username"
        android:textSize="35sp"
        android:textColor="#000"
        android:layout_below="@+id/textUsername"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textFlirtApp"
        android:layout_alignEnd="@+id/textFlirtApp"
        android:background="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="25sp"
        android:textColor="#FFF"
        android:id="@+id/textPassword"
        android:layout_below="@+id/Username"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textSize="35sp"
        android:textColor="#000"
        android:ems="10"
        android:id="@+id/Password"
        android:background="#FFFFFF"
        android:layout_below="@+id/textPassword"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_sign_in"
            android:id="@+id/btnSignIn" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:text="@string/btn_cancel"
            android:id="@+id/btnCancel" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account_here"
        android:id="@+id/btnSignUp"
        android:background="#00000000"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="#CCC" />

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/need_account_here"
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/textNeedAccout"
        android:layout_above="@+id/btnSignUp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#CCC" />-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:gravity="center"
        android:textSize="20sp"
        android:id="@+id/response"
        android:layout_above="@+id/btnSignUp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#CCC" />

</RelativeLayout>
